# age-pq-workspace

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.cursor/rules/: crypto-comparison-antipatterns.mdc  crypto-memory-safety.mdc  crypto-type-safety.mdc  docs-changelog-readme.mdc  forbid-cargo-clean.mdc  test-hygiene.mdc
.cursor/skills/rust-doc-agent/: SKILL.md
.cursor/skills/secure-gate-audit/: SKILL.md
age-hpke-pq/: CHANGELOG.md  Cargo.toml  README.md
age-hpke-pq/docs/: draft-ietf-hpke-pq-03.txt  hpke-pq.md  pq-xwing-hpke-upgrade-instructions.md
age-hpke-pq/src/: aead.rs  aliases.rs  error.rs  hpke.rs  kdf.rs  lib.rs
age-hpke-pq/src/kem/: combiner.rs  common.rs  ml_kem.rs  mlkem768x25519.rs  mod.rs  x25519.rs  x448.rs
age-hpke-pq/src/kem/ml_kem/: mlkem1024.rs  mlkem512.rs  mlkem768.rs
age-hpke-pq/tests/: combiner_tests.rs  determinism_tests.rs  error_tests.rs  kat_tests.rs  kdf_tests.rs  mlkem768x25519_tests.rs
age-plugin-pq/: .gitignore  CHANGELOG.md  Cargo.toml
age-plugin-pq/scripts/: package_it.py
age-plugin-pq/src/: hpke_pq.rs  main.rs
age-plugin-pq/tests/: integration.rs
age-plugin-pq/tests/data/: pq-native.recipient  pq-plugin.recipient  pq.identity
age-recipient-pq/: CHANGELOG.md  Cargo.toml
age-recipient-pq/docs/: pq-recipient-upgrade-instructions.md
age-recipient-pq/examples/: pq-keygen.rs
age-recipient-pq/src/: lib.rs
age-recipient-pq/tests/: age_cli_interop_decrypt_tests.rs
docs/: age-hpke-pq-upgrade-instructions.md  draft-ietf-hpke-hpke-02.txt  draft-irtf-cfrg-hybrid-kems-07.txt  plugin-upgrade-instructions.md
src/: hpke_pq.rs  lib.rs  main.rs
src/kem/: mlkem768x25519.rs
tests/: combiner_tests.rs  derand_tests.rs  error_tests.rs  hybrid_recipient_tests.rs  integration.rs  kem_tests.rs  pq_stanza_tests.rs
tests/data/: age_go_identity.txt  pq.keypair
